# copybook

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  common.h  copybook_zh_CN.ts  copybookpainter.cpp  copybookpainter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  strokegraphics.cpp  strokegraphics.h
